--- a/views/home/aboutUs.ejs
+++ b/views/home/aboutUs.ejs
@@ -2,7 +2,20 @@
 	
 <div class="bg-white m-4 p-4 shadow">
 	<ul class="fs-5">
-		<li>We, at Food Aid, provides food to poor people across the country.</li>
-		<li>Our main aim is to eliminate the hunger and satisfy the food needs of needy people by providing them from our donors.</li>
+		<p>We are a passionate group of individuals dedicated to building a world where food waste is minimized and everyone has access to nutritious meals. We believe that everyone deserves the opportunity to thrive, and food is a fundamental part of a healthy and fulfilling life.</p>
+		<p>Our mission is to create a more just and sustainable food system through food donation management. We achieve this by:</p>
+			<li>Developing innovative technology platforms that connect food donors with those in need.</li>
+			<li>Partnering with local communities and organizations to create a network of support.</li>
+			<li>Raising awareness about food insecurity and food waste issues.</li>
+			<li>Advocating for policies that promote equitable access to food.</li>
+	</br>
+			<p>We invite you to join us in our mission to create a hunger-free future. Here are some ways you can get involved:</p>
+			
+			<li>Donate food: Donate your surplus food.</li>
+			<li>Volunteer your time: Help us sort, pack, and distribute food donations.</li>
+			<li>Spread the word: Tell your friends and family about our work.</li>
+</br>
+			
+			<p><b><i>Together, we can make a difference.</i></b></p>
 	</ul>
 </div>
