--- a/views/home/contactUs.ejs
+++ b/views/home/contactUs.ejs
@@ -7,11 +7,11 @@
 			<li>1500-393-455 (within India)</li>
 			<li>1500-393-455 (within India)</li>
 		</ul>
-		<li>You can also visit our offices and to get insights of how our agents serve food at different places.</li>
+		<li>You're welcome to explore our offices and witness firsthand the impactful ways our agents distribute food across various locations</li>
 		<ul>
 			<li>XYZ Nagar, Delhi</li>
 			<li>XYZ Vihar, Noida</li>
 		</ul>
-		<li>You can also email your suggestions and feedback at <mark>xyz@gmail.com</mark></li>
+		<li>You can also email your suggestions and feedback at <mark>Nourish@gmail.com</mark></li>
 	</ul>
 </div>
