--- a/views/home/mission.ejs
+++ b/views/home/mission.ejs
@@ -1,5 +1,8 @@
 <h1 class="m-4 color-theme">Our Mission</h1>
 	
 <div class="bg-white m-4 p-4 shadow">
-		<h4>Our mission is to feed all the needy people and no one feels that he is going to sleep hungry today.</h4>
+	<h3><b>Food is not simply a privilege, but a fundamental right enjoyed by all!</b></h3>
+</br>
+		<p>Imagine a world where food waste is minimized and everyone has access to the nutritious meals they need. This is the ambitious vision driving our system. By connecting individuals and organizations with excess food to those facing hunger, we aim to create a more just and sustainable food system.</p>
+		<p>Through efficient logistics, clear tracking, and collaborative partnerships, we work to reduce food waste, increase access to nutritious food, and promote overall community well-being. This not only addresses immediate hunger needs but also contributes to long-term social and environmental benefits.</p>
 </div>
