--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,7 @@
 <header>
 	<nav class="navbar navbar-expand-sm navbar-light p-0 h-100">
 		<div class="container-fluid p-0">
-			<a class="navbar-brand text-white ps-2" href="/">Food Aid</a>
+			<a class="navbar-brand text-white ps-2" href="/">Nourish</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
 				aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span><i class="fas fa-bars text-white"></i></span>
