--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -42,7 +42,7 @@
 			<select class="form-select" name="role" id="role">
 				<option value="donor">Donor</option>
 				<option value="agent">Agent</option>
-				<option value="admin">Admin</option>
+				<!-- <option value="admin">Admin</option> -->
 			</select>
 		</div>
 		
