--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-	<%- include('partials/header') %>
-	<%- include('partials/alerts') %>
+	<%- include('partials/header.ejs') %>
+	<%- include('partials/alerts.ejs') %>
 	<%- body %>
 	
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
