--- a/views/donor/donate.ejs
+++ b/views/donor/donate.ejs
@@ -9,8 +9,8 @@
 		
 		<form action="/donor/donate" method="POST" class="border m-4 my-3 p-4 bg-white rounded-2 shadow">
 			<div class="mb-4">
-				<label for="food" class="form-label">Food type</label>
-				<input type="text" name="donation[foodType]" class="form-control" id="food" placeholder="Enter food.." required autofocus>
+				<label for="foodType" class="form-label">Food Type</label>
+				<input type="text" name="donation[foodType]" class="form-control" id="foodType" placeholder="Enter food.." required autofocus>
 			</div>
 			
 			<div class="row">
@@ -20,25 +20,21 @@
 				</div>
 				
 				<div class="mb-4 col-sm-6">
-					<label for="time" class="form-label">Time of cooking</label>
-					<input type="datetime-local" name="donation[cookingTime]" class="form-date-input" id="time" required>
+					<label for="cookingTime" class="form-label">Time of Cooking</label>
+					<input type="datetime-local" name="donation[cookingTime]" class="form-date-input" id="cookingTime" required>
 				</div>
-				
-				
-				
 			</div>
 			
 			<div class="row">
 				<div class="mb-4 col-sm-8">
-					<label for="address" class="form-label">Address to collect</label>
+					<label for="address" class="form-label">Address to Collect</label>
 					<input type="text" name="donation[address]" class="form-control" id="address" placeholder="Enter address.." value="<%= currentUser.address %>" required>
 				</div>
 				
-				<div class="mb-4">
+				<div class="mb-4 col-sm-4">
 					<label for="phone" class="form-label">Phone</label>
-					<input type="tel" name="agent[phone]" class="form-control" id="phone" placeholder="Enter phone.." pattern="\d{10}" title="Please enter 10 digits" value="<%= currentUser.phone %>">
+					<input type="tel" name="donation[phone]" class="form-control" id="phone" placeholder="Enter phone.." pattern="\d{10}" title="Please enter 10 digits" value="<%= currentUser.phone %>" required>
 				</div>
-				
 			</div>
 			
 			<div class="mb-4">
@@ -48,19 +44,12 @@
 			
 			<button type="submit" class="btn w-75 d-block m-auto mt-4">Submit</button>
 		</form>
-		
 	</div>
 </main>
 
-<!-- <script>
-	const d = new Date();
-	const dateString = d.getFullYear() + "-" + ("0"+(d.getMonth()+1)).slice(-2) + "-" + ("0" + d.getDate()).slice(-2) + "T" + ("0" + d.getHours()).slice(-2) + ":" + ("0" + d.getMinutes()).slice(-2);
-	document.getElementById("time").value = dateString;
-</script> -->
 <script>
 	// Get the current date and time in the format required by datetime-local input
 	var currentDate = new Date().toISOString().slice(0, 16);
-
 	// Set the min attribute to the current date and time
-	document.getElementById("time").min = currentDate;
+	document.getElementById("cookingTime").min = currentDate;
 </script>
