--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,21 +1,36 @@
 <header>
-	<nav class="navbar navbar-expand-sm navbar-light p-0 h-100">
-		<div class="container-fluid p-0">
-			<a class="navbar-brand text-white ps-2" href="/">Nourish</a>
+	<nav class="navbar navbar-expand-md navbar-light p-0 h-100">
+		<div class="container-fluid">
+			<a class="navbar-brand text-white ps-4" href="/"><h2>Nourish</h2></a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
 				aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span><i class="fas fa-bars text-white"></i></span>
 			</button>
-			<div class="collapse navbar-collapse ps-2" id="navbarSupportedContent" style="z-index: 100;">
-				<ul class="navbar-nav ms-auto me-3">
+			<div class="collapse navbar-collapse ps-2" id="navbarSupportedContent" style="z-index: 1;">
+				<ul class="navbar-nav me-lg-5 m-0 m-auto">
+					<li class="nav-item"><a class="nav-link" href="/">Home</a></li>
 					<li class="nav-item"><a class="nav-link" href="/home/about-us">About us</a></li>
 					<li class="nav-item"><a class="nav-link" href="/home/mission">Our mission</a></li>
-					<li class="nav-item"><a class="nav-link" href="/home/contact-us">Contact us</a></li>
+					<li class="nav-item pe-3"><a class="nav-link" href="/home/contact-us">Contact us</a></li>
 					<% if(currentUser) { %>
-						<li class="user-icon"><%= currentUser.firstName[0] %></li>
+						<div class="dropdown ">
+							<li class="user-icon dropdown-toggle " data-bs-toggle="dropdown" aria-expanded="false"><%= currentUser.firstName[0] %></li>
+							<ul class="dropdown-menu dropdown-menu-end dropdown-menu-dark">
+								<% if(currentUser.role === "donor") { %>
+									<li><a class="dropdown-item active" href="/donor/profile">Profile</a></li>
+								<% } else if(currentUser.role === "agent") { %>
+									<li><a class="dropdown-item active" href="/agent/profile">Profile</a></li>
+								<% } else { %>
+									<li><a class="dropdown-item active" href="/admin/profile">Profile</a></li>
+									<% } %>
+									<hr class="dropdown-divider">
+							  <li><a class="dropdown-item" href="/auth/logout">Logout</a></li>
+							  
+							</ul>
+						  </div>
 					<% } else { %>
-						<li class="nav-item"><a class="nav-link" href="/auth/login">Login</a></li>
-						<li class="nav-item"><a class="nav-link" href="/auth/signup">Signup</a></li>
+						<li class="button1 btn-outline-success me-1 rounded"><a class="nav-link" href="/auth/login" >Login</a></li>
+						<li class="button2 btn-outline-primary rounded"><a class="nav-link" href="/auth/signup">Signup</a></li>
 					<% } %>
 				</ul>
 			</div>
