--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -1,6 +1,6 @@
 main
 {
-	height: calc(100vh - 50px);
+	height: calc(100vh - 70px);
 	overflow-y: hidden;
 	display: flex;
 }
@@ -15,7 +15,8 @@ main
 #sidebar
 {
 	height: 100%;
-	width: 228px;	flex-shrink: 0;
+	width: 280px;	
+	flex-shrink: 0;
 	background-color: #2c3e50;
 	overflow-y: auto;
 	transition: 0.15s linear;
@@ -43,27 +44,11 @@ main
 	font-size: 18px;
 }
 
-#sidebar ul li:first-child, #sidebar ul li:last-child
-{
-	text-align: center;
-	margin: 5px;
+.img-small{
+	filter: invert();
+	/* filter: grayscale(); */
 }
-
-#sidebar ul li a:not(.btn)
-{
-	text-decoration: none;
-	color: #c5bec9;
-	display: inline-block;
-	width: 100%;
-	padding: 10px 15px;
-}
-#sidebar ul li a.active
-{
-	color: white;
-	background-color: #595963;
-	border-left: 4px solid var(--theme-color);
-}
-#sidebar ul li a:not(.btn):hover
-{
-	background-color: #656570;
+.img-small2{
+	/* filter: invert(); */
+	filter: grayscale();
 }
