--- a/views/admin/assignAgent.ejs
+++ b/views/admin/assignAgent.ejs
@@ -36,7 +36,7 @@
 				<textarea type="text" name="adminToAgentMsg" class="form-control" id="msg" placeholder="You can write here some msg.."></textarea>
 			</div>
 			
-			<button type="submit" class="btn w-75 d-block m-auto mt-4">Assign</button>
+			<button type="submit" class="btn btn-primary w-75 d-block m-auto mt-4">Assign</button>
 		</form>
 		
 	</div>
