--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,17 +1,18 @@
+
 <div class="m-0 pt-5 w-100 bg-img-2">
-	<form action="/auth/login" method="POST" class="w-50 bg-white p-5 m-auto" style="min-width: 320px;">
+	<form action="/auth/login" method="POST" class="form w-50 bg-white p-5 m-auto" style="min-width: 450px; background-color: transparent;">
 		<h3 class="text-center mb-3">User Login</h3>
 		<div class="mb-3">
-			<label for="email" class="form-label">Email address</label>
-			<input type="email" name="email" class="form-control" id="email" placeholder="Enter email.." required autofocus>
+			<!-- <label for="email" class="form-label">Email address</label> -->
+			<input type="email" name="email" class="form-control" id="email" placeholder="Email address" required autofocus>
 		</div>
 
 		<div class="mb-3">
-			<label for="password" class="form-label">Password</label>
-			<input type="password" name="password" class="form-control" id="password" placeholder="Enter password.." required>
+			<!-- <label for="password" class="form-label">Password</label> -->
+			<input type="password" name="password" class="form-control" id="password" placeholder="Password" required>
 		</div>
 		
-		<button type="submit" class="btn d-block m-auto mt-4">Submit</button>
+		<button type="submit" class="btn btn-primary d-block m-auto mt-4">Login</button>
 		
 		<div class="mt-3">
 			<span>Don't have an account?</span>
