--- a/views/auth/verify-otp.ejs
+++ b/views/auth/verify-otp.ejs
@@ -4,7 +4,28 @@
 	<title><%= title %></title>
 </head>
 <body>
-	<h1>Verify OTP</h1>
+	<div class="m-0 pt-5 w-100 bg-img-1">
+	<div class="row justify-content-center">
+		<div class="col-4 form p-5">
+			<h1 class="text-center">Verify OTP</h1>
+	<% if (error && error.length > 0) { %>
+		<div>
+			<%= error %>
+		</div>
+	<% } %>
+	<form action="/auth/verify-otp" method="POST">
+		<div>
+			<label for="otp">OTP:</label>
+			<input type="text" class="form-control" name="otp" id="otp" required>
+		</div>
+		<div>
+			<button type="submit" class="btn btn-primary d-block m-auto mt-4">Verify</button>
+		</div>
+	</form>
+		</div>
+	</div>
+</div>
+	<!-- <h1>Verify OTP</h1>
 	<% if (error && error.length > 0) { %>
 		<div>
 			<%= error %>
@@ -18,6 +39,6 @@
 		<div>
 			<button type="submit">Verify</button>
 		</div>
-	</form>
+	</form> -->
 </body>
 </html>
