--- a/views/donor/donate.ejs
+++ b/views/donor/donate.ejs
@@ -42,7 +42,7 @@
 				<textarea type="text" name="donation[donorToAdminMsg]" class="form-control" id="msg" placeholder="You can write here some msg.."></textarea>
 			</div>
 			
-			<button type="submit" class="btn w-75 d-block m-auto mt-4">Submit</button>
+			<button type="submit" class="btn btn-primary w-75 d-block m-auto mt-4">Submit</button>
 		</form>
 	</div>
 </main>
