--- a/views/agent/previousCollections.ejs
+++ b/views/agent/previousCollections.ejs
@@ -26,7 +26,7 @@
 							<td> <%= previousCollections[i].donor.firstName + " " + previousCollections[i].donor.lastName %> </td>
 							<td> <%= previousCollections[i].address %> </td>
 							<td> <%= previousCollections[i].phone %> </td>
-							<td><a href="/agent/collection/view/<%= previousCollections[i]._id %>" class="btn">View</a></td>
+							<td><a href="/agent/collection/view/<%= previousCollections[i]._id %>" class="btn btn-primary">View</a></td>
 						</tr>
 					<% } %>
 				</tbody>
