--- a/views/admin/pendingDonations.ejs
+++ b/views/admin/pendingDonations.ejs
@@ -28,7 +28,7 @@
 							<td> <%= pendingDonations[i].foodType %> </td>
 							<td> <%= pendingDonations[i].quantity %> </td>
 							<td class="fw-bold text-<%= pendingDonations[i].status %>"> <%= pendingDonations[i].status %> </td>
-							<td><a href="/admin/donation/view/<%= pendingDonations[i]._id %>" class="btn">View</a></td>
+							<td><a href="/admin/donation/view/<%= pendingDonations[i]._id %>" class="btn btn-primary">View</a></td>
 						</tr>
 					<% } %>
 				</tbody>
