--- a/views/donor/pendingDonations.ejs
+++ b/views/donor/pendingDonations.ejs
@@ -9,58 +9,58 @@
 		</div>
 		
 		<div class="m-4">
-			<% for(let i=0; i<pendingDonations.length; i++) { %>
+			<% pendingDonations.forEach(donation => { %>
 				<div class="bg-white mb-4 p-4 shadow-sm">
 					<div class="mb-2">
 						<span>Food type:</span>
-						<span><%= pendingDonations[i].foodType %></span>
+						<span><%= donation.foodType %></span>
 					</div>
 					
 					<div class="mb-2">
 						<span>Quantity:</span>
-						<span><%= pendingDonations[i].quantity %></span>
+						<span><%= donation.quantity %></span>
 					</div>
 					
 					<div class="mb-2">
 						<span>Address given:</span>
-						<span><%= pendingDonations[i].address %></span>
+						<span><%= donation.address %></span>
 					</div>
 					
 					<div class="mb-2">
 						<span>Phone given:</span>
-						<span><%= pendingDonations[i].phone %></span>
+						<span><%= donation.phone %></span>
 					</div>
 					
 					<div class="mb-2">
 						<span>Time of cooking:</span>
-						<span><%= pendingDonations[i].cookingTime.toLocaleString("en-IN", { dateStyle: "medium", timeStyle: "short"}) %></span>
+						<span><%= donation.cookingTime.toLocaleString("en-IN", { dateStyle: "medium", timeStyle: "short"}) %></span>
 					</div>
 					
 					<div class="mb-2">
 						<span>Status:</span>
 						
-						<% if(pendingDonations[i].status == "pending") { %>
+						<% if(donation.status === "pending") { %>
 							<span class="text-pending">Your donation request hasn't been processed yet.</span>
-						<% } else if(pendingDonations[i].status == "rejected") { %>
+						<% } else if(donation.status === "rejected") { %>
 							<span class="text-rejected">Your donation request has been rejected</span>
-						<% } else if(pendingDonations[i].status == "accepted") { %>
+						<% } else if(donation.status === "accepted") { %>
 							<span class="text-accepted">Your donation request has been accepted. Please wait while an agent is being assigned.</span>
-						<% } else if(pendingDonations[i].status == "assigned") { %>
-							<span class="text-assigned">Your donation request has been accepted and the agent: <%= pendingDonations[i].agent.firstName + " " + pendingDonations[i].agent.lastName %> has been assigned for collecting food from your house.</span>
+						<% } else if(donation.status === "assigned" && donation.agent) { %>
+							<span class="text-assigned">Your donation request has been accepted and the agent: <%= donation.agent.firstName + " " + donation.agent.lastName %> has been assigned for collecting food from your house.</span>
+						<% } else if(donation.status === "assigned" && !donation.agent) { %>
+							<span class="text-assigned">Your donation request has been accepted and an agent has been assigned for collecting food from your house.</span>
 						<% } %>
 					</div>
 					
-					<% if(pendingDonations[i].status == "rejected") { %>
+					<% if(donation.status == "rejected") { %>
 						<div class="mb-2">
-							<a class="btn" href="/donor/donation/deleteRejected/<%= pendingDonations[i]._id %>">Okay</a>
+							<a class="btn btn-warning" href="/donor/donation/deleteRejected/<%= donation._id %>">Okay</a>
 						</div>
 					<% } %>
 					
 				</div>
-			<% } %>
+			<% }) %>
 		</div>
-		
-		
 		
 	</div>
 </main>
