--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,18 +1,69 @@
 <header>
 	<nav class="navbar navbar-expand-md navbar-light p-0 h-100">
 		<div class="container-fluid">
+			<% if(!currentUser) { %>
 			<a class="navbar-brand text-white ps-4" href="/"><h2>Nourish</h2></a>
+			<% } else { %>
+			<div class="navbar-brand text-white ps-4" href="/"><h2>Nourish</h2></div>
+			<% } %>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
 				aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span><i class="fas fa-bars text-white"></i></span>
 			</button>
 			<div class="collapse navbar-collapse ps-2" id="navbarSupportedContent" style="z-index: 1;">
-				<ul class="navbar-nav me-lg-3 m-0 m-auto">
-					<li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-					<li class="nav-item"><a class="nav-link" href="/home/about-us">About us</a></li>
-					<li class="nav-item"><a class="nav-link" href="/home/mission">Our mission</a></li>
-					<li class="nav-item pe-3"><a class="nav-link" href="/home/contact-us">Contact us</a></li>
+				<% if(currentUser) { %>
+					<ul class="navbar-nav me-3  m-auto">
+					<% if(currentUser.role === "donor") { %>
+						<li class="nav-item"><a class="nav-link" href="/donor/dashboard">
+							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-clipboard-data-fill mb-1" viewBox="0 0 16 16">
+								<path d="M6.5 0A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0zm3 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5z"/>
+								<path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1A2.5 2.5 0 0 1 9.5 5h-3A2.5 2.5 0 0 1 4 2.5zM10 8a1 1 0 1 1 2 0v5a1 1 0 1 1-2 0zm-6 4a1 1 0 1 1 2 0v1a1 1 0 1 1-2 0zm4-3a1 1 0 0 1 1 1v3a1 1 0 1 1-2 0v-3a1 1 0 0 1 1-1"/>
+							  </svg>
+							Dashboard</a></li>
+						<li class="nav-item"><a class="nav-link" href="/donor/donate">
+							<img src="   https://cdn-icons-png.flaticon.com/512/4117/4117121.png " width="20" height="20" alt="" title="" class="img-small mb-1">
+							Donate</a></li>
+						<li class="nav-item"><a class="nav-link" href="/donor/donations/pending">
+							<img src="https://uxwing.com/wp-content/themes/uxwing/download/time-and-date/pending-icon.png" width="20" height="20" alt="Pending icon" title="Pending icon" class="img-small mb-1">
+						My Pending Donations</a></li>
+						<li class="nav-item pe-3"><a class="nav-link" href="/donor/donations/previous">
+							<img src="https://cdn-icons-png.flaticon.com/512/3208/3208254.png" width="20" height="20" alt="" title="" class="img-small2 mb-1">
+						My Previous Donations</a></li>
+					<% } if(currentUser.role === "agent") { %>
+						<li class="nav-item"><a class="nav-link" href="/agent/dashboard">
+							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-clipboard-data-fill mb-1" viewBox="0 0 16 16">
+								<path d="M6.5 0A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0zm3 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5z"/>
+								<path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1A2.5 2.5 0 0 1 9.5 5h-3A2.5 2.5 0 0 1 4 2.5zM10 8a1 1 0 1 1 2 0v5a1 1 0 1 1-2 0zm-6 4a1 1 0 1 1 2 0v1a1 1 0 1 1-2 0zm4-3a1 1 0 0 1 1 1v3a1 1 0 1 1-2 0v-3a1 1 0 0 1 1-1"/>
+							  </svg>
+							Dashboard</a></li>
+						<li class="nav-item"><a class="nav-link" href="/agent/collections/pending"><img src="https://uxwing.com/wp-content/themes/uxwing/download/time-and-date/pending-icon.png" width="20" height="20" alt="Pending icon" title="Pending icon" class="img-small mb-1">
+						My Pending Collections</a></li>
+						<li class="nav-item"><a class="nav-link" href="/agent/collections/previous"><img src="https://cdn-icons-png.flaticon.com/512/3208/3208254.png" width="20" height="20" alt="" title="" class="img-small2 mb-1">
+						My Previous Collections</a></li>
+					<% } if(currentUser.role === "admin") { %>
+						<li class="nav-item"><a class="nav-link" href="/admin/dashboard">
+							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-clipboard-data-fill mb-1" viewBox="0 0 16 16">
+								<path d="M6.5 0A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0zm3 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5z"/>
+								<path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1A2.5 2.5 0 0 1 9.5 5h-3A2.5 2.5 0 0 1 4 2.5zM10 8a1 1 0 1 1 2 0v5a1 1 0 1 1-2 0zm-6 4a1 1 0 1 1 2 0v1a1 1 0 1 1-2 0zm4-3a1 1 0 0 1 1 1v3a1 1 0 1 1-2 0v-3a1 1 0 0 1 1-1"/>
+							  </svg>
+							Dashboard</a></li>
+						<li class="nav-item"><a class="nav-link" href="/admin/agents">
+							<img src="/assets/images/Daco_5058091.png" height="20px" width="20px" class="img-small mb-1">
+						Agents</a></li>
+						<li class="nav-item"><a class="nav-link" href="/admin/donations/pending"><img src="https://uxwing.com/wp-content/themes/uxwing/download/time-and-date/pending-icon.png" width="20" height="20" alt="Pending icon" title="Pending icon" class="img-small mb-1">
+						Pending Donations</a></li>
+						<li class="nav-item"><a class="nav-link" href="/admin/donations/previous"><img src="https://cdn-icons-png.flaticon.com/512/3208/3208254.png" width="20" height="20" alt="" title="" class="img-small2 mb-1">
+						Previous Donations</a></li>
+						<% } %>
 					</ul>
+					<% } else { %>
+					<ul class="navbar-nav me-3 m-auto">
+						<li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+						<li class="nav-item"><a class="nav-link" href="/home/about-us">About us</a></li>
+						<li class="nav-item"><a class="nav-link" href="/home/mission">Our mission</a></li>
+						<li class="nav-item pe-3"><a class="nav-link" href="/home/contact-us">Contact us</a></li>
+					</ul>
+					<% } %>
 					<ul class="navbar-nav me-lg-5 m-0 m-auto">
 					<% if(currentUser) { %>
 						<div class="dropdown ">
