--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -17,7 +17,11 @@
 		<div class="mt-3">
 			<span>Don't have an account?</span>
 			<a href="/auth/signup">Signup here</a>
-		</div>
-		
+			</div>
+			
+			<div class="mt-3">
+		     <span>Forget Password</span>
+			<a href="/auth/forgot-password">Forgot Password?</a>
+		  </div>
 	</form>
 </div>
